--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,7 @@
 {
   "env": {
     "es6": true,
-    "node": true,
-    "mocha": true
+    "node": true
   },
   "extends": ["eslint-config-leapfrog", "prettier"],
   "plugins": ["prettier"],
