--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "scripts": {
-    "start": "es-dev-server --app-index src/index.html --node-resolve --watch --open"
+    "start": "es-dev-server --app-index index.html --node-resolve --watch --open"
   },
-  "type": "module",
+ 
   "dependencies": {
+    "@polymer/lit-element": "^0.7.1",
+    "@webcomponents/webcomponentsjs": "^2.4.4",
     "lit-html": "^1.3.0"
   },
   "devDependencies": {
